@@ -1,7 +1,8 @@
 {
     "require-dev": {
         "woocommerce/woocommerce-sniffs": "^0.1.0",
-        "phpunit/phpunit": "6.5.14"
+        "phpunit/phpunit": "6.5.14",
+        "yoast/phpunit-polyfills": "^1.0"
     },
     "scripts": {
 		"test": [
