@@ -5,6 +5,7 @@
 * Fix - Wrap TaxJar API zipcodes with wc_normalize_postcode() before inserting into the database.
 * Fix - Update shipping label to only show non-refunded order line items.
 * Fix - Added 3 digits currency code on shipping label price for non USD.
+* Fix - Defined WP_TESTS_PHPUNIT_POLYFILLS_PATH in PHPUnit bootstrap.php.
 
 = 1.25.19 - 2021-10-14 =
 * Add - Notice about tax nexus in settings.
